@@ -219,9 +219,11 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2014-2017 Michal Josef Špaček
-     Artistic License
-     BSD 2-Clause License
+    © 2014-2017 Michal Josef Špaček
+
+    Artistic License
+
+    BSD 2-Clause License
 
 VERSION
     0.09
