@@ -1,5 +1,6 @@
 0.09
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
 
 0.08 2017-11-08T13:02:58+01:00
